plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.openapi.generator" version "6.0.0"
}

group = 'com.avimedical'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.1'
	implementation 'org.openapitools:jackson-databind-nullable:0.2.2'
	implementation 'org.flywaydb:flyway-core'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.assertj:assertj-core:3.23.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava.dependsOn tasks.openApiGenerate

sourceSets.main.java.srcDirs += 'build/generated/openapi/src/main/java'

openApiGenerate {
	generatorName = "spring"
	inputSpec = "$projectDir/src/main/resources/api.yml"
	outputDir = "$buildDir/generated/openapi"
	apiPackage = "com.avimedical.appointments.generated.api"
	modelPackage = "com.avimedical.appointments.generated.model"
	configOptions = [
			interfaceOnly: "true",
			skipDefaultInterface: "true"
	]
}

